--- a/package.json
+++ b/package.json
@@ -46,10 +46,13 @@
   },
   "dependencies": {
     "@babel/polyfill": "*",
+    "@material-ui/core": "^4.4.2",
+    "@material-ui/icons": "^4.4.1",
     "raw-loader": "^3.1.0",
     "react": "*",
     "react-dom": "*",
     "react-redux": "^7.1.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "semantic-ui-react": "^0.88.1"
   }
 }
